# InCorp-messenger

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp  server.cpp
Client/: BaseClient.h  CMakeLists.txt  Client.cpp  Client.h
Client/Manager/: AuthorizationManager.cpp  AuthorizationManager.h  BaseManager.h  ChatManager.cpp  ChatManager.h
Client/RoleController/: BaseRoleController.h  RoleController.cpp  RoleController.h
Client/Tests/: gmockTests.cpp
Client/UserOptions/: BaseUserOptions.h  EmployeeOptions.cpp  EmployeeOptions.h  GuestOptions.cpp  GuestOptions.h  ManagerOptions.cpp  ManagerOptions.h
Server/: CMakeLists.txt  Server.cpp  main.cpp
Server/MainServerLogic/CommandCreator/: CommandCreator.cpp  CommandCreator.h
Server/MainServerLogic/CommandHandler/: CommandHandler.cpp  CommandHandler.h
Server/MainServerLogic/CommandParser/: CommandCreator.h
Server/MainServerLogic/Commands/: BaseCommand.h  CreateChat.cpp  CreateUser.cpp  DeleteUser.cpp  DeleteUser.h  Login.cpp  Login.h  Logout.cpp  Logout.h  UpdateChats.cpp  UpdateChats.h  WriteMessage.cpp  WriteMessage.h
Server/MainServerLogic/DataBaseConnector/: DataBaseConnector.cpp
Server/MainServerLogic/MainLogic/: MainLogic.cpp  MainLogic.h
Server/MainServerLogic/MainLogic/Controller/: Controller.cpp  Controller.h
Server/MainServerLogic/MainLogic/Managers/: AuthorizationManager.cpp  AuthorizationManager.h  BaseManager.h  ChatManager.cpp  ChatManager.h  DataBaseManager.cpp  DataBaseManager.h
Server/Server/: BaseServer.h  HttpServer.cpp  HttpServer.h
Server/Tests/: gmockTests.cpp
authServer/: CMakeLists.txt  Dockerfile  main.cpp
authServer/Server/: main.cpp
authServer/Server/MainServerLogic/MainLogic/: MainLogic.h
authServer/src/libs/Connection/: HttpConnection.h
authServer/src/libs/Connection/ConnectionCreator/: BaseConnectionCreator.h
authServer/src/scripts/travis/: install-linux.sh
src/client/: CMakeLists.txt  main.cpp
src/client/lib/Client/: CMakeLists.txt
src/client/lib/Client/CallbacksHolder/: CallbacksHolder.h
src/client/lib/Client/CallbacksHolder/Callback/: BaseCallback.h
src/client/lib/Client/ChatObjects/: Authorization.cpp  Authorization.h  BaseObject.h  ChatAction.cpp  ChatAction.h  ChatItem.cpp  ChatItem.h  ChatRoom.cpp  ChatRoom.h  ChatUpdates.cpp  ChatUpdates.h  Checked.cpp  Checked.h  KeyWords.h  ListChats.cpp  ListChats.h  Log.cpp  Log.h  LogUpdates.cpp  LogUpdates.h  Message.cpp  Message.h  MessageStatus.cpp  MessageStatus.h  Request.cpp  Request.h  User.cpp  User.h  UserInfo.cpp  UserInfo.h  UserPreview.cpp  UserPreview.h
src/client/lib/Client/Client/: BaseClient.h  Client.cpp  Client.h
src/client/lib/Client/Commands/: AuthorizationCmd.cpp  AuthorizationCmd.h  BaseCmd.cpp  BaseCmd.h  ChatObserverCmd.cpp  ChatObserverCmd.h  ChatUpdateCmd.cpp  ChatUpdateCmd.h  GetChatMessages.cpp  GetChatMessages.h  GetChatMessagesCmd.cpp  GetChatMessagesCmd.h  GetChatRoom.cpp  GetChatRoom.h  GetChatRoomCmd.cpp  GetChatRoomCmd.h  GetLastMessageCmd.cpp  GetLastMessageCmd.h  GetListChats.h  GetListChatsCmd.cpp  GetListChatsCmd.h  GetLogCmd.cpp  GetLogCmd.h  GetUserCmd.cpp  GetUserCmd.h  RegistrationCmd.cpp  RegistrationCmd.h  SendMessageCmd.cpp  SendMessageCmd.h  SetObserverChatCmd.cpp  SetObserverChatCmd.h  SystemUpdateCmd.cpp  SystemUpdateCmd.h
src/client/lib/Client/Commands/CmdCreator/: CommandCreator.cpp  CommandCreator.h  Commands.h
src/client/lib/Client/Controller/: Controller.cpp  Controller.h
src/client/lib/Client/Parser/: Parser.cpp  Parser.h
src/client/lib/Client/RoleController/: RoleController.cpp  RoleController.h
src/client/lib/Client/UserOptions/: BaseUserOptions.cpp  BaseUserOptions.h  CompanyOptions.cpp  CompanyOptions.h  EmployeeOptions.cpp  EmployeeOptions.h  GuestOptions.cpp  GuestOptions.h  ManagerOptions.cpp  ManagerOptions.h
src/client/test/: gmock.cpp  gtest.cpp
src/client/ui/Callbacks/: Chat.h  Log.h  Login.h  Registrate.h
src/client/ui/CreateGroupWidget/: creategroupwidget.ui
src/client/ui/LogWidget/: logwidget.cpp  logwidget.h  logwidget.ui
src/client/ui/LoginWidget/: loginwidget.cpp  loginwidget.h  loginwidget.ui
src/client/ui/MainWidget/: mainwidget.cpp  mainwidget.h  mainwidget.ui
src/client/ui/MenuWidget/: menuwidget.cpp  menuwidget.h  menuwidget.ui
src/client/ui/RegistrateWidget/: registratewidget.cpp  registratewidget.h  registratewidget.ui
src/client/ui/UserData/: UserData.h
src/client/ui/Viewer/: Viewer.cpp  Viewer.h
src/client/ui/Views/ChatView/: chatview.cpp  chatview.h
src/client/ui/Views/Delegates/ChatDelegate/: chatdelegate.cpp  chatdelegate.h
src/client/ui/Views/Delegates/GroupDelegate/: groupdelegate.cpp  groupdelegate.h
src/client/ui/Views/Delegates/LogDelegate/: logdelegate.cpp  logdelegate.h
src/client/ui/Views/GroupListView/: grouplistview.cpp  grouplistview.h
src/client/ui/Views/LogView/: logview.cpp  logview.h
src/client/ui/Views/Models/ChatModel/: chatmodel.cpp  chatmodel.h
src/client/ui/Views/Models/GroupModel/: groupmodel.cpp  groupmodel.h
src/client/ui/Views/Models/LogModel/: logmodel.cpp  logmodel.h
src/client/ui/Views/TextView/: textview.cpp  textview.h
src/server/lib/CompanyServer/: CMakeLists.txt
src/server/lib/CompanyServer/MainServerLogic/CommandCreator/: CommandCreator.cpp  CommandCreator.h
src/server/lib/CompanyServer/MainServerLogic/CommandHandler/: CommandHandler.cpp  CommandHandler.h
src/server/lib/CompanyServer/MainServerLogic/Commands/: BaseCommand.h  Command.cpp  Command.h  Command1.cpp  Command1.h  Command2.cpp  Command2.h  Command3.cpp  Command3.h  Command4.cpp  Command4.h  Command5.cpp  Command5.h  Command6.cpp  Command6.h  Command7.cpp  Command7.h  Command8.cpp  Command8.h  CompanyCommand.cpp  CompanyCommand.h  CreateChat.cpp  CreateChat.h  CreateUser.cpp  CreateUser.h  DeleteChat.cpp  DeleteChat.h  DeleteUser.cpp  DeleteUser.h  GetChatInfo.cpp  (+21 more)
src/server/lib/CompanyServer/Server/: BaseServer.h  HttpServer.cpp  HttpServer.h  Server.cpp  Server.h  WorkerThread.cpp  WorkerThread.h
src/server/lib/CompanyServer/Tests/: gmockTests.cpp
(+92 files in other folders)
